--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -82,16 +82,20 @@ body * {
   border: 0;
   border-radius: 50%;
   position: absolute;
-  left: 0;
+  left: 0;  /* left trabalhado nas animações */
   z-index: 1;
   top: 50%;
   transform: translateY(-50%);
   /* SEGUNDA FORMA (sem o top de 50%): transform: translateY(-12.5%); */
+  animation: slide-back 0.2s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -169,5 +173,25 @@ footer {
   }
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* Animação do botão "switch */
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
